@@ -23,6 +23,4 @@ readonly PECL_MEMCACHE_SRC='memcache-3.0.8.tgz|24505e9b263d2c77f8ae5e9b4725e7d1'
 readonly PECL_MEMCACHED_SRC='memcached-2.2.0.tgz|28937c6144f734e000c6300242f44ce6'
 readonly PECL_XHPROF_SRC='xhprof-0.9.4.tgz|ab4062a7337e3bdaa2fd7065a7942b8d'
 readonly PECL_REDIS_SRC='redis-2.2.5.tgz|60151c2a837cd4a94f420d45e6114b0b'
-readonly SQUID_SRC='squid-2.7.STABLE9.tar.gz|7d3b8b0bdda3ae56e438d4a95a97d3b3'
-readonly VARNISH_SRC='varnish-3.0.6.tar.gz|d21e70bb285c586adae96a8d1196a39b'
 readonly ZABBIX_SRC='zabbix-2.4.1.tar.gz|c450049ecee8adc022425ddb2c83e402'
